@@ -124,8 +124,8 @@
 				</RegExp>
 				<expression noclean="1">(.+)</expression>
 			</RegExp>
-			<RegExp input="$$1" output="&lt;mpaa&gt;$INFO[certprefix]\1&lt;/mpaa&gt;" dest="5+">
-				<expression>&quot;rating&quot;:"([^"]*)"</expression>
+			<RegExp input="$$10" output="&lt;url function=&quot;ParseTVShowContentRating&quot;&gt;https://api.themoviedb.org/3/tv/$$10/content_ratings?api_key=6a5be4999abf74eba1f9a8311294c267&amp;amp;language=en-US&lt;/url&gt;" dest="5+">
+				<expression />
 			</RegExp>
 			<RegExp input="$$10" output="&lt;chain function=&quot;GetCast&quot;&gt;$$10&lt;/chain&gt;" dest="5+">
 				<expression />
@@ -433,6 +433,15 @@
 			<expression noclean="1" />
 		</RegExp>
 	</GetIMDbRatingByID>
+
+	<ParseTVShowContentRating dest="4">
+		<RegExp input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="4">
+			<RegExp input="$$1" output="&lt;mpaa&gt;$INFO[certprefix]\1&lt;/mpaa&gt;" dest="5+">
+				<expression>&quot;$INFO[tmdbcertcountry]&quot;,&quot;rating&quot;:"([^"]*)"</expression>
+			</RegExp>
+			<expression noclean="1" />
+		</RegExp>
+	</ParseTVShowContentRating>	
 
 	<ParseFallbackTMDBPlot dest="4">
 		<RegExp input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="4">
