@@ -1,3 +1,6 @@
+[B]3.4.0[/B]
+- Added: option to select certification country
+
 [B]3.3.0[/B]
 - Added: scraping of IMDb and TVDB IDs
 - Added: option to set certification prefix
